tests/files/type_checker_tests/should_fail/017.cmdr
//Should fail when post decrementing something that isn't a variable
x = 2--;